create dim_customers table

--- a/dbt/olist_ecommerce/models/staging/stg_geolocation.yml
+++ b/dbt/olist_ecommerce/models/staging/stg_geolocation.yml
@@ -10,3 +10,7 @@ models:
         tests: [not_null]
       - name: geolocation_state
         tests: [not_null]
+      - name: geolocation_lat
+        tests: [not_null]
+      - name: geolocation_lng
+        tests: [not_null]
